--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   position: relative;
   background: url('./assets/bg2.png') no-repeat center center fixed;
   background-size: cover;
+  background-attachment: scroll; 
 }
 
 .overlay {
@@ -13,12 +14,13 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.1); 
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
   transition: background 0.3s ease;
   pointer-events: none;
-  z-index: 1; 
+  z-index: 1;
 }
+
 
 
 .mission-container {
